--- a/client/app/components/bxu1-btn/bxu1-btn-temp.html
+++ b/client/app/components/bxu1-btn/bxu1-btn-temp.html
@@ -1,3 +1,6 @@
 <div class="bxu1-btn-container">
-  <button>bxu1-btn-temp</button>
+  <!-- <span ng-transclude="span"></span> -->
+  <button ng-click="$ctrl.bxu1Click()">
+    <ng-transclude></ng-transclude>
+  </button>
 </div>
