--- a/client/app/pages/todo/todo.module.scss
+++ b/client/app/pages/todo/todo.module.scss
@@ -8,6 +8,15 @@
   left: 50%;
   transform: translateX(-50%);
 
+  & input[type="text"] {
+    @include smart-input;
+    padding: .3em .5em;
+    background: black;
+    color: lighten(lightgrey, 80%);
+    font-size: 16px;
+    width: 300px;
+  }
+
   & > .todo-container {
     position: absolute;
     left: 50%;
@@ -35,6 +44,10 @@
         &:not(:first-child) {
           margin-top: .7em;
         }
+        
+        // & .task-input {
+        //   @include smart-input;
+        // }
       }
     }
 
@@ -44,7 +57,6 @@
       color: lighten(grey, 30%);
 
       & > input[type="text"] {
-        @include smart-input;
         padding: .3em .5em;
         background: black;
         color: lighten(lightgrey, 80%);
