--- a/client/app/pages/chatAuth/chatAuth.module.scss
+++ b/client/app/pages/chatAuth/chatAuth.module.scss
@@ -1,10 +1,57 @@
 @import '../../../statics/style/mixin.scss';
 
+$border-radius: 5px;
+
 .chatAuth {
-  font-family: Helvetica Neue, Segoe UI, Helvetica, Arial, sans-serif;
-  .nickname-input {
-    @include smart-input;
-    border-radius: 0;
-    text-align: center;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: 200;
+  @include flex(column, space-between);
+  max-width: 500px;
+  margin: auto;
+  padding-top: 2vw;
+
+  & > * {
+    margin-bottom: 1em;
   }
+
+  & .title {
+    font-size: 1.5em;
+    color: lighten(black, 30%);
+  }
+  // min-width: 300px;
+
+  & .logo {
+    width:100px;
+  }
+
+  .conn-btn { 
+    @include smart-btn(#0084ff, white);
+    border-radius: $border-radius;
+    padding: .5em 2em;
+    font-size: 1.1em;
+    letter-spacing: .1em;
+  }
+
+  & > .reset {
+    @include flex(column, space-between);
+    max-width: 300px;
+    & > * {
+      margin-bottom: 1em;
+    }
+
+    & .nickname-input {
+      // @include smart-input;
+      border-radius: $border-radius;
+      text-align: center;
+      outline: none;
+      border: 1px solid lightgrey;
+      padding: .5em 2em;
+      text-align: left;
+      // line-height: 2em;
+      font-size: 1.1em;
+      font-weight: 200;
+      // letter-spacing: .1em;
+    }
+  }
+
 }
