--- a/client/app/pages/chatRoom/chatRoom.module.scss
+++ b/client/app/pages/chatRoom/chatRoom.module.scss
@@ -1,1 +1,38 @@
 // @import '../static/theme.scss';
+.chatRoom {
+  display: flex;
+  position: relative;
+  width: 100%;
+  min-width: 400px;
+  height: 100vh; 
+  overflow-y: auto;
+  
+  & > .sideBar {
+    flex-grow: 1;
+    border-right: 1px solid lightgrey;
+    display: flex;
+    flex-direction: column;
+
+    & > .header {
+      height: 4vw;
+      // box-sizing: border-box;
+      border-bottom: 1px solid lightgray;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      color: lighten(#0084ff, 20%);
+      padding: 0 1em;
+
+      & > .logout, & > .createRoom {
+        & > .fas.fa-lg {
+          color: lighten(#0084ff, 20%);
+          cursor: pointer;
+        }
+      }
+    }
+  } // .sideBar
+
+  & > .chat {
+    flex-grow: 3;
+  }
+}
