--- a/client/app/pages/chatRoom/chatRoom.module.scss
+++ b/client/app/pages/chatRoom/chatRoom.module.scss
@@ -1,4 +1,5 @@
-// @import '../static/theme.scss';
+@import '../../../statics/style/mixin.scss';
+
 .chatRoom {
   display: flex;
   position: relative;
@@ -34,5 +35,29 @@
 
   & > .chat {
     flex-grow: 3;
-  }
+    height: 100vh;
+    @include flex(column, center);
+
+    & > smart-chatting {
+      flex-grow: 1;
+    }
+
+    & > .chat-input {
+      @include flex(row, center);
+      flex-wrap: nowrap;
+      width: 100%;
+      border-top: 1px solid lightgray;
+      height: 10vh;
+      flex-shrink: 0;
+
+      & > .input-box {
+        flex-grow: 1;
+      }
+
+      & > .tools {
+        height: 100%;
+        flex-grow: 0;
+      }
+    }
+  } // .chat
 }
