--- a/client/statics/style/mixin.scss
+++ b/client/statics/style/mixin.scss
@@ -7,6 +7,14 @@
   outline: none;
 }
 
+@mixin smart-dived-input($padding) {
+  outline: none;
+  width: 100%;
+  height: 100%;
+  border: none;
+  padding: $padding;
+}
+
 @mixin rond-shape {
   border-radius: 50%;
 }
@@ -41,3 +49,4 @@
   justify-content: $justify-content;
   align-items: center;
 }
+
