--- a/client/app/components/smart-chatting/smart-chatting.html
+++ b/client/app/components/smart-chatting/smart-chatting.html
@@ -1,8 +1,7 @@
 <div class="smart-chat-container">
-  smart chatting
   <div class="content">
     <ul class="messages">
-      <li ng-repeat="message in $ctrl.messages track by $index">
+      <li ng-repeat="message in $ctrl.msgQueue | orderBy: 'date' track by $index">
         <smart-message message="message"></smart-message>
       </li>
     </ul>
