--- a/client/app/components/smart-message/smart-message.html
+++ b/client/app/components/smart-message/smart-message.html
@@ -1,3 +1,15 @@
 <div class="smart-message">
-  
+  <!-- {{ $ctrl.message | json:4}} -->
+  <p class="date">{{ $ctrl.message.date | date: 'yyyy年MM月dd日 HH: mm' }}</p>
+  <div ng-class="{content: true, selfContent: $ctrl.message.self, otherContent: !$ctrl.message.self}">
+    <span class="username">{{$ctrl.message.user.nickName}}</span>
+    <div>
+      <smart-photo class="photo"
+        photo-path="$ctrl.photoPath" 
+        photo-size="$ctrl.photoSize"></smart-photo>
+      <span class="msgContent">
+        {{ $ctrl.message.message }}
+      </span>
+    </div>
+  </div>
 </div>
