--- a/client/app/pages/chat/chat.module.scss
+++ b/client/app/pages/chat/chat.module.scss
@@ -1,1 +1,11 @@
 // @import '../static/theme.scss';
+.chat {
+  & .notice {
+    position: absolute;
+    top: 1em;
+    left: 50%;
+    transform: translateX(-50%);
+    min-width: 300px;
+    z-index: 999;
+  }
+}
