--- a/client/app/components/smart-message/smart-message.html
+++ b/client/app/components/smart-message/smart-message.html
@@ -7,9 +7,9 @@
       <smart-photo class="photo"
         photo-path="$ctrl.photoPath" 
         photo-size="$ctrl.photoSize"></smart-photo>
-      <span class="msgContent">
+      <div class="msgContent">
         {{ $ctrl.message.message }}
-      </span>
+      </div>
     </div>
   </div>
 </div>
